Update java_heap_space.md